Fixed alignment of menu item pictures

--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,11 @@ form {
      font-weight: 400;
      font-size: 1.8rem;
      text-align: center;
-     padding: 5% 0 5% 0;
+     padding: 3% 0 5% 0;
 }
 
 .menu-items {
-     width: 90%;
+     width: 100%;
      padding-bottom: 10px;
 }
 
